clean up references to AS4 + misc docs cleanup

--- a/packages/integration-testsuite/package.json
+++ b/packages/integration-testsuite/package.json
@@ -43,9 +43,9 @@
     "supertest": "^6.2.3"
   },
   "peerDependencies": {
-    "@jest/globals": "28.x || 29.x",
+    "@jest/globals": "29.x",
     "graphql": "^16.6.0",
-    "jest": "28.x || 29.x"
+    "jest": "29.x"
   },
   "volta": {
     "extends": "../../package.json"
